--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 dependencies {
     compile fileTree(dir: 'bukkit', includes: ['*.jar'])
     compile fileTree(dir: 'libs', includes: ['*.jar'])
+    compile 'redis.clients:jedis:2.7.3'
+    compile 'org.apache.commons:commons-pool2:2.4.1'
 }
 
 jar {
