--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,5 @@
+generic:
+ fetch_interval: 5000
 redis:
  master:
   address: 192.168.11.10:1234
@@ -9,3 +11,5 @@ redis:
   port: 6379
   username:
   password:
+ table: block_l
+
